--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,8 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="396dp"
             android:visibility="visible"
-            tools:srcCompat="@tools:sample/avatars"
-            tools:visibility="visible" />
+            android:src="@drawable/image"
+            tools:visibility="visible"
+            android:contentDescription="@string/imageText" />
 
         <Button
             android:id="@+id/buttonLogcat"
